src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Worked__c</fullName>
        <label>Amount Worked</label>
        <summarizedField>Assignment__c.Amount_Worked__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Analytics_Cloud_Features__c</fullName>
        <label>Analytics Cloud Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Sales Wave Deployment</fullName>
                </value>
                <value>
                    <fullName>Service Wave Deployment</fullName>
                </value>
                <value>
                    <fullName>Community Wave Deployment</fullName>
                </value>
                <value>
                    <fullName>Marketing B2B (Pardot) Wave Deployment</fullName>
                </value>
                <value>
                    <fullName>Event Monitoring Wave Deployment</fullName>
                </value>
                <value>
                    <fullName>Beyondcore (Einstein) Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppExchange_App_Development_Features__c</fullName>
        <label>AppExchange App Development Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration / Connected Apps / Lightning Connect</fullName>
                </value>
                <value>
                    <fullName>Security Review and AppEx listing</fullName>
                </value>
                <value>
                    <fullName>Namespaces / Managed Packages</fullName>
                </value>
                <value>
                    <fullName>LMA / COA / Environment Hub</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev (Lightning and Javascript)</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev (Visualforce and APEX)</fullName>
                </value>
                <value>
                    <fullName>Trialforce</fullName>
                </value>
                <value>
                    <fullName>Lightning Components</fullName>
                </value>
                <value>
                    <fullName>Wave Analytics</fullName>
                </value>
                <value>
                    <fullName>Shield (encryption, event monitoring, field history)</fullName>
                </value>
                <value>
                    <fullName>Large Data Volumes (over 5 Million Records in the org)</fullName>
                </value>
                <value>
                    <fullName>Heroku (Customer Facing applications)</fullName>
                </value>
                <value>
                    <fullName>Mobile Custom App Dev (Salesforce SDK/Force)</fullName>
                </value>
                <value>
                    <fullName>Customer Community - Self Service (B to C)</fullName>
                </value>
                <value>
                    <fullName>Customer Community - Self Service (B to B)</fullName>
                </value>
                <value>
                    <fullName>Chatter (process collaboration)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Cloud_Features__c</fullName>
        <label>App Cloud Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Heroku Application Development</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev (Visualforce and APEX)</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev (Lightning and Javascript)</fullName>
                </value>
                <value>
                    <fullName>Security (compliance products)</fullName>
                </value>
                <value>
                    <fullName>Reporting against custom data</fullName>
                </value>
                <value>
                    <fullName>Mobile Custom App Dev (Salesforce SDK/Force)</fullName>
                </value>
                <value>
                    <fullName>Identity and SSO</fullName>
                </value>
                <value>
                    <fullName>Large Data Volumes (over 5 Million Records in the org)</fullName>
                </value>
                <value>
                    <fullName>Internet of Things (IOT)</fullName>
                </value>
                <value>
                    <fullName>Application Development Lifecycle &amp; Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Case_Volume_Per_Day__c</fullName>
        <label>Average Case Volume Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Emails__c</fullName>
        <label>Billing Email(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Rating__c</fullName>
        <label>Customer Satisfaction Rating</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Go_Live_Date__c</fullName>
        <label>Estimated Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Work_End_Date__c</fullName>
        <label>Estimated Work End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Id__c</fullName>
        <label>Google Drive Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kick_off_Date__c</fullName>
        <label>Kick-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Worked__c</fullName>
        <label>Time Worked</label>
        <summarizedField>Assignment__c.Time_Worked__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Allocated__c</fullName>
        <label>Total Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Time_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Time Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Kick_off_Date__c</columns>
        <columns>Total_Time_Allocated__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Kick_off_Date__c</columns>
        <columns>Total_Time_Allocated__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>